--- a/Test_Unitaires/Coverage_model_info/index-sort-l.html
+++ b/Test_Unitaires/Coverage_model_info/index-sort-l.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">255</td>
+            <td class="headerCovTableEntry">271</td>
             <td class="headerCovTableEntry">342</td>
-            <td class="headerCovTableEntryLo">74.6 %</td>
+            <td class="headerCovTableEntryMed">79.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">23</td>
             <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntryMed">88.5 %</td>
+            <td class="headerCovTableEntry">26</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -72,12 +72,12 @@
     <tr>
       <td class="coverFile"><a href="model/index.html">model</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=75 height=10 alt="74.6%"><img src="snow.png" width=25 height=10 alt="74.6%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=79 height=10 alt="79.2%"><img src="snow.png" width=21 height=10 alt="79.2%"></td></tr></table>
       </td>
-      <td class="coverPerLo">74.6&nbsp;%</td>
-      <td class="coverNumLo">255 / 342</td>
-      <td class="coverPerMed">88.5&nbsp;%</td>
-      <td class="coverNumMed">23 / 26</td>
+      <td class="coverPerMed">79.2&nbsp;%</td>
+      <td class="coverNumMed">271 / 342</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">26 / 26</td>
     </tr>
   </table>
   </center>
