--- a/Test_Unitaires/Coverage_model_info/model/carte.c.gcov.html
+++ b/Test_Unitaires/Coverage_model_info/model/carte.c.gcov.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">41</td>
             <td class="headerCovTableEntry">44</td>
-            <td class="headerCovTableEntryHi">93.2 %</td>
+            <td class="headerCovTableEntry">44</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">7</td>
             <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryMed">87.5 %</td>
+            <td class="headerCovTableEntry">8</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -68,32 +68,32 @@
 <a name="6"><span class="lineNum">       6 </span>            :  */</a>
 <a name="7"><span class="lineNum">       7 </span>            : #include &quot;main_model.h&quot;</a>
 <a name="8"><span class="lineNum">       8 </span>            : </a>
-<a name="9"><span class="lineNum">       9 </span><span class="lineCov">       3801 : void init_Case(Case * c){</span></a>
-<a name="10"><span class="lineNum">      10 </span><span class="lineCov">       3801 :     c-&gt;accessible=0;</span></a>
-<a name="11"><span class="lineNum">      11 </span><span class="lineCov">       3801 :     c-&gt;sous_marin=0;</span></a>
-<a name="12"><span class="lineNum">      12 </span><span class="lineCov">       3801 : }</span></a>
+<a name="9"><span class="lineNum">       9 </span><span class="lineCov">       4701 : void init_Case(Case * c){</span></a>
+<a name="10"><span class="lineNum">      10 </span><span class="lineCov">       4701 :     c-&gt;accessible=0;</span></a>
+<a name="11"><span class="lineNum">      11 </span><span class="lineCov">       4701 :     c-&gt;sous_marin=0;</span></a>
+<a name="12"><span class="lineNum">      12 </span><span class="lineCov">       4701 : }</span></a>
 <a name="13"><span class="lineNum">      13 </span>            : </a>
 <a name="14"><span class="lineNum">      14 </span><span class="lineCov">         35 : void set_Rocher(CARTE * carte,int ligne,int colonne){</span></a>
 <a name="15"><span class="lineNum">      15 </span><span class="lineCov">         35 :     carte-&gt;carte[ligne][colonne].accessible=1;</span></a>
 <a name="16"><span class="lineNum">      16 </span><span class="lineCov">         35 : }</span></a>
 <a name="17"><span class="lineNum">      17 </span>            : </a>
-<a name="18"><span class="lineNum">      18 </span><span class="lineCov">          6 : int est_occupe(Case * c){</span></a>
-<a name="19"><span class="lineNum">      19 </span><span class="lineCov">          6 :     return c-&gt;accessible;</span></a>
+<a name="18"><span class="lineNum">      18 </span><span class="lineCov">          7 : int est_occupe(Case * c){</span></a>
+<a name="19"><span class="lineNum">      19 </span><span class="lineCov">          7 :     return c-&gt;accessible;</span></a>
 <a name="20"><span class="lineNum">      20 </span>            : }</a>
 <a name="21"><span class="lineNum">      21 </span>            : </a>
-<a name="22"><span class="lineNum">      22 </span><span class="lineNoCov">          0 : void free_Carte(CARTE * carte){</span></a>
-<a name="23"><span class="lineNum">      23 </span><span class="lineNoCov">          0 :     free(carte);</span></a>
-<a name="24"><span class="lineNum">      24 </span><span class="lineNoCov">          0 : }</span></a>
+<a name="22"><span class="lineNum">      22 </span><span class="lineCov">          2 : void free_Carte(CARTE * carte){</span></a>
+<a name="23"><span class="lineNum">      23 </span><span class="lineCov">          2 :     free(carte);</span></a>
+<a name="24"><span class="lineNum">      24 </span><span class="lineCov">          2 : }</span></a>
 <a name="25"><span class="lineNum">      25 </span>            : </a>
-<a name="26"><span class="lineNum">      26 </span><span class="lineCov">         38 : void init_map(CARTE * c){</span></a>
+<a name="26"><span class="lineNum">      26 </span><span class="lineCov">         46 : void init_map(CARTE * c){</span></a>
 <a name="27"><span class="lineNum">      27 </span>            :     int i,j;</a>
-<a name="28"><span class="lineNum">      28 </span><span class="lineCov">        418 :     for (i=0;i&lt;NMAX;i++) {</span></a>
-<a name="29"><span class="lineNum">      29 </span><span class="lineCov">       4180 :         for (j = 0; j &lt;NMAX; j++) {</span></a>
-<a name="30"><span class="lineNum">      30 </span><span class="lineCov">       3800 :             init_Case(&amp;c-&gt;carte[i][j]);</span></a>
+<a name="28"><span class="lineNum">      28 </span><span class="lineCov">        506 :     for (i=0;i&lt;NMAX;i++) {</span></a>
+<a name="29"><span class="lineNum">      29 </span><span class="lineCov">       5060 :         for (j = 0; j &lt;NMAX; j++) {</span></a>
+<a name="30"><span class="lineNum">      30 </span><span class="lineCov">       4600 :             init_Case(&amp;c-&gt;carte[i][j]);</span></a>
 <a name="31"><span class="lineNum">      31 </span>            : </a>
 <a name="32"><span class="lineNum">      32 </span>            :         }</a>
 <a name="33"><span class="lineNum">      33 </span>            :     }</a>
-<a name="34"><span class="lineNum">      34 </span><span class="lineCov">         38 : }</span></a>
+<a name="34"><span class="lineNum">      34 </span><span class="lineCov">         46 : }</span></a>
 <a name="35"><span class="lineNum">      35 </span>            : </a>
 <a name="36"><span class="lineNum">      36 </span><span class="lineCov">          2 : void Crea_Archipelago(CARTE * c){</span></a>
 <a name="37"><span class="lineNum">      37 </span><span class="lineCov">          2 :     set_Rocher(c,1,6);</span></a>
