--- a/Test_Unitaires/Coverage_model_info/model/index.html
+++ b/Test_Unitaires/Coverage_model_info/model/index.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">255</td>
+            <td class="headerCovTableEntry">271</td>
             <td class="headerCovTableEntry">342</td>
-            <td class="headerCovTableEntryLo">74.6 %</td>
+            <td class="headerCovTableEntryMed">79.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">23</td>
             <td class="headerCovTableEntry">26</td>
-            <td class="headerCovTableEntryMed">88.5 %</td>
+            <td class="headerCovTableEntry">26</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -72,32 +72,32 @@
     <tr>
       <td class="coverFile"><a href="carte.c.gcov.html">carte.c</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=93 height=10 alt="93.2%"><img src="../snow.png" width=7 height=10 alt="93.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
       </td>
-      <td class="coverPerHi">93.2&nbsp;%</td>
-      <td class="coverNumHi">41 / 44</td>
-      <td class="coverPerMed">87.5&nbsp;%</td>
-      <td class="coverNumMed">7 / 8</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">44 / 44</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">8 / 8</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="joueur.c.gcov.html">joueur.c</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=73 height=10 alt="73.0%"><img src="../snow.png" width=27 height=10 alt="73.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=76 height=10 alt="75.5%"><img src="../snow.png" width=24 height=10 alt="75.5%"></td></tr></table>
       </td>
-      <td class="coverPerLo">73.0&nbsp;%</td>
-      <td class="coverNumLo">200 / 274</td>
-      <td class="coverPerHi">93.8&nbsp;%</td>
-      <td class="coverNumHi">15 / 16</td>
+      <td class="coverPerMed">75.5&nbsp;%</td>
+      <td class="coverNumMed">207 / 274</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">16 / 16</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="main_model.c.gcov.html">main_model.c</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=58 height=10 alt="58.3%"><img src="../snow.png" width=42 height=10 alt="58.3%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=83 height=10 alt="83.3%"><img src="../snow.png" width=17 height=10 alt="83.3%"></td></tr></table>
       </td>
-      <td class="coverPerLo">58.3&nbsp;%</td>
-      <td class="coverNumLo">14 / 24</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">1 / 2</td>
+      <td class="coverPerMed">83.3&nbsp;%</td>
+      <td class="coverNumMed">20 / 24</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">2 / 2</td>
     </tr>
   </table>
   </center>
