--- a/Test_Unitaires/Coverage_model_info/model/joueur.c.func-sort-c.html
+++ b/Test_Unitaires/Coverage_model_info/model/joueur.c.func-sort-c.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">200</td>
+            <td class="headerCovTableEntry">207</td>
             <td class="headerCovTableEntry">274</td>
-            <td class="headerCovTableEntryLo">73.0 %</td>
+            <td class="headerCovTableEntryMed">75.5 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">15</td>
             <td class="headerCovTableEntry">16</td>
-            <td class="headerCovTableEntryHi">93.8 %</td>
+            <td class="headerCovTableEntry">16</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -60,19 +60,11 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#164">free_joueur</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#154">reset_joueur</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#214">result_deplacement</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#293">sonar</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
@@ -84,15 +76,23 @@
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
+              <td class="coverFn"><a href="joueur.c.gcov.html#164">free_joueur</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="joueur.c.gcov.html#293">sonar</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#271">result_missile</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#77">deplacement_possible</a></td>
-              <td class="coverFnHi">6</td>
+              <td class="coverFn"><a href="joueur.c.gcov.html#320">action</a></td>
+              <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="joueur.c.gcov.html#320">action</a></td>
+              <td class="coverFn"><a href="joueur.c.gcov.html#77">deplacement_possible</a></td>
               <td class="coverFnHi">7</td>
             </tr>
     <tr>
@@ -109,19 +109,19 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#169">start_Sous_Marin</a></td>
-              <td class="coverFnHi">17</td>
+              <td class="coverFnHi">20</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#7">energie_up</a></td>
-              <td class="coverFnHi">41</td>
+              <td class="coverFnHi">45</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#128">init_joueur</a></td>
-              <td class="coverFnHi">73</td>
+              <td class="coverFnHi">89</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#144">init_calque</a></td>
-              <td class="coverFnHi">80</td>
+              <td class="coverFnHi">96</td>
             </tr>
   </table>
   <br>
