--- a/Test_Unitaires/Coverage_model_info/model/joueur.c.func.html
+++ b/Test_Unitaires/Coverage_model_info/model/joueur.c.func.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">200</td>
+            <td class="headerCovTableEntry">207</td>
             <td class="headerCovTableEntry">274</td>
-            <td class="headerCovTableEntryLo">73.0 %</td>
+            <td class="headerCovTableEntryMed">75.5 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">15</td>
             <td class="headerCovTableEntry">16</td>
-            <td class="headerCovTableEntryHi">93.8 %</td>
+            <td class="headerCovTableEntry">16</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,7 +69,7 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#77">deplacement_possible</a></td>
-              <td class="coverFnHi">6</td>
+              <td class="coverFnHi">7</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#13">energie_down</a></td>
@@ -77,7 +77,7 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#7">energie_up</a></td>
-              <td class="coverFnHi">41</td>
+              <td class="coverFnHi">45</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#178">enough_energie</a></td>
@@ -85,15 +85,15 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#164">free_joueur</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">3</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#144">init_calque</a></td>
-              <td class="coverFnHi">80</td>
+              <td class="coverFnHi">96</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#128">init_joueur</a></td>
-              <td class="coverFnHi">73</td>
+              <td class="coverFnHi">89</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#243">missile</a></td>
@@ -113,11 +113,11 @@
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#293">sonar</a></td>
-              <td class="coverFnHi">1</td>
+              <td class="coverFnHi">3</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#169">start_Sous_Marin</a></td>
-              <td class="coverFnHi">17</td>
+              <td class="coverFnHi">20</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="joueur.c.gcov.html#427">surface</a></td>
