--- a/Test_Unitaires/Coverage_model_info/model/main_model.c.func-sort-c.html
+++ b/Test_Unitaires/Coverage_model_info/model/main_model.c.func-sort-c.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">14</td>
+            <td class="headerCovTableEntry">20</td>
             <td class="headerCovTableEntry">24</td>
-            <td class="headerCovTableEntryLo">58.3 %</td>
+            <td class="headerCovTableEntryMed">83.3 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">1</td>
             <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntryLo">50.0 %</td>
+            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -61,11 +61,11 @@
     </tr>
     <tr>
               <td class="coverFn"><a href="main_model.c.gcov.html#36">free_model</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFnHi">1</td>
             </tr>
     <tr>
               <td class="coverFn"><a href="main_model.c.gcov.html#11">init_model</a></td>
-              <td class="coverFnHi">13</td>
+              <td class="coverFnHi">17</td>
             </tr>
   </table>
   <br>
