--- a/Test_Unitaires/Coverage_model_info/model/main_model.c.gcov.html
+++ b/Test_Unitaires/Coverage_model_info/model/main_model.c.gcov.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_model.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">14</td>
+            <td class="headerCovTableEntry">20</td>
             <td class="headerCovTableEntry">24</td>
-            <td class="headerCovTableEntryLo">58.3 %</td>
+            <td class="headerCovTableEntryMed">83.3 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">1</td>
             <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntryLo">50.0 %</td>
+            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntryHi">100.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -72,37 +72,37 @@
 <a name="10"><span class="lineNum">      10 </span>            : </a>
 <a name="11"><span class="lineNum">      11 </span>            : #include &quot;main_model.h&quot;</a>
 <a name="12"><span class="lineNum">      12 </span>            : </a>
-<a name="13"><span class="lineNum">      13 </span><span class="lineCov">         13 : int init_model(Playground * pg)</span></a>
+<a name="13"><span class="lineNum">      13 </span><span class="lineCov">         17 : int init_model(Playground * pg)</span></a>
 <a name="14"><span class="lineNum">      14 </span>            : {</a>
-<a name="15"><span class="lineNum">      15 </span><span class="lineCov">         13 :     int statut = EXIT_FAILURE;</span></a>
-<a name="16"><span class="lineNum">      16 </span><span class="lineCov">         13 :     pg-&gt;map= malloc(sizeof(CARTE));</span></a>
-<a name="17"><span class="lineNum">      17 </span><span class="lineCov">         13 :     if(pg-&gt;map==NULL){</span></a>
+<a name="15"><span class="lineNum">      15 </span><span class="lineCov">         17 :     int statut = EXIT_FAILURE;</span></a>
+<a name="16"><span class="lineNum">      16 </span><span class="lineCov">         17 :     pg-&gt;map= malloc(sizeof(CARTE));</span></a>
+<a name="17"><span class="lineNum">      17 </span><span class="lineCov">         17 :     if(pg-&gt;map==NULL){</span></a>
 <a name="18"><span class="lineNum">      18 </span><span class="lineNoCov">          0 :         return statut;</span></a>
 <a name="19"><span class="lineNum">      19 </span>            :     }</a>
-<a name="20"><span class="lineNum">      20 </span><span class="lineCov">         13 :     init_map(pg-&gt;map);</span></a>
-<a name="21"><span class="lineNum">      21 </span><span class="lineCov">         13 :     pg-&gt;J1= malloc(sizeof (JOUEUR));</span></a>
-<a name="22"><span class="lineNum">      22 </span><span class="lineCov">         13 :     pg-&gt;J2= malloc(sizeof(JOUEUR));</span></a>
-<a name="23"><span class="lineNum">      23 </span><span class="lineCov">         13 :     pg-&gt;ia= malloc(sizeof(IA));</span></a>
-<a name="24"><span class="lineNum">      24 </span><span class="lineCov">         13 :     if (pg-&gt;J2==NULL || pg-&gt;J1==NULL ||pg-&gt;ia==NULL){</span></a>
+<a name="20"><span class="lineNum">      20 </span><span class="lineCov">         17 :     init_map(pg-&gt;map);</span></a>
+<a name="21"><span class="lineNum">      21 </span><span class="lineCov">         17 :     pg-&gt;J1= malloc(sizeof (JOUEUR));</span></a>
+<a name="22"><span class="lineNum">      22 </span><span class="lineCov">         17 :     pg-&gt;J2= malloc(sizeof(JOUEUR));</span></a>
+<a name="23"><span class="lineNum">      23 </span><span class="lineCov">         17 :     pg-&gt;ia= malloc(sizeof(IA));</span></a>
+<a name="24"><span class="lineNum">      24 </span><span class="lineCov">         17 :     if (pg-&gt;J2==NULL || pg-&gt;J1==NULL ||pg-&gt;ia==NULL){</span></a>
 <a name="25"><span class="lineNum">      25 </span><span class="lineNoCov">          0 :         return statut;</span></a>
 <a name="26"><span class="lineNum">      26 </span>            :     }</a>
-<a name="27"><span class="lineNum">      27 </span><span class="lineCov">         13 :     if(init_joueur(pg-&gt;J1)==EXIT_FAILURE){</span></a>
+<a name="27"><span class="lineNum">      27 </span><span class="lineCov">         17 :     if(init_joueur(pg-&gt;J1)==EXIT_FAILURE){</span></a>
 <a name="28"><span class="lineNum">      28 </span><span class="lineNoCov">          0 :         return statut;</span></a>
 <a name="29"><span class="lineNum">      29 </span>            :     }</a>
-<a name="30"><span class="lineNum">      30 </span><span class="lineCov">         13 :     if(init_joueur(pg-&gt;J2)==EXIT_FAILURE){</span></a>
+<a name="30"><span class="lineNum">      30 </span><span class="lineCov">         17 :     if(init_joueur(pg-&gt;J2)==EXIT_FAILURE){</span></a>
 <a name="31"><span class="lineNum">      31 </span><span class="lineNoCov">          0 :         return statut;</span></a>
 <a name="32"><span class="lineNum">      32 </span>            :     }</a>
-<a name="33"><span class="lineNum">      33 </span><span class="lineCov">         13 :     pg-&gt;actif=J1;</span></a>
-<a name="34"><span class="lineNum">      34 </span><span class="lineCov">         13 :     statut=EXIT_SUCCESS;</span></a>
-<a name="35"><span class="lineNum">      35 </span><span class="lineCov">         13 :     return statut;</span></a>
+<a name="33"><span class="lineNum">      33 </span><span class="lineCov">         17 :     pg-&gt;actif=J1;</span></a>
+<a name="34"><span class="lineNum">      34 </span><span class="lineCov">         17 :     statut=EXIT_SUCCESS;</span></a>
+<a name="35"><span class="lineNum">      35 </span><span class="lineCov">         17 :     return statut;</span></a>
 <a name="36"><span class="lineNum">      36 </span>            : }</a>
 <a name="37"><span class="lineNum">      37 </span>            : </a>
-<a name="38"><span class="lineNum">      38 </span><span class="lineNoCov">          0 : void free_model(Playground * pg){</span></a>
-<a name="39"><span class="lineNum">      39 </span><span class="lineNoCov">          0 :     free_Carte(pg-&gt;map);</span></a>
-<a name="40"><span class="lineNum">      40 </span><span class="lineNoCov">          0 :     free_joueur(pg-&gt;J1);</span></a>
-<a name="41"><span class="lineNum">      41 </span><span class="lineNoCov">          0 :     free_joueur(pg-&gt;J2);</span></a>
-<a name="42"><span class="lineNum">      42 </span><span class="lineNoCov">          0 :     free(pg-&gt;ia);</span></a>
-<a name="43"><span class="lineNum">      43 </span><span class="lineNoCov">          0 : }</span></a>
+<a name="38"><span class="lineNum">      38 </span><span class="lineCov">          1 : void free_model(Playground * pg){</span></a>
+<a name="39"><span class="lineNum">      39 </span><span class="lineCov">          1 :     free_Carte(pg-&gt;map);</span></a>
+<a name="40"><span class="lineNum">      40 </span><span class="lineCov">          1 :     free_joueur(pg-&gt;J1);</span></a>
+<a name="41"><span class="lineNum">      41 </span><span class="lineCov">          1 :     free_joueur(pg-&gt;J2);</span></a>
+<a name="42"><span class="lineNum">      42 </span><span class="lineCov">          1 :     free(pg-&gt;ia);</span></a>
+<a name="43"><span class="lineNum">      43 </span><span class="lineCov">          1 : }</span></a>
 <a name="44"><span class="lineNum">      44 </span>            : </a>
 <a name="45"><span class="lineNum">      45 </span>            : </a>
 </pre>
