--- a/Test_Unitaires/Coverage_test_info/Test_Unitaires/index.html
+++ b/Test_Unitaires/Coverage_test_info/Test_Unitaires/index.html
@@ -31,18 +31,18 @@
             <td class="headerValue">coverage_test.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">357</td>
-            <td class="headerCovTableEntry">429</td>
-            <td class="headerCovTableEntryMed">83.2 %</td>
+            <td class="headerCovTableEntry">414</td>
+            <td class="headerCovTableEntry">452</td>
+            <td class="headerCovTableEntryHi">91.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-05-16 13:05:34</td>
+            <td class="headerValue">2022-05-23 15:29:47</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">32</td>
             <td class="headerCovTableEntry">39</td>
-            <td class="headerCovTableEntryMed">82.1 %</td>
+            <td class="headerCovTableEntry">41</td>
+            <td class="headerCovTableEntryHi">95.1 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -72,12 +72,12 @@
     <tr>
       <td class="coverFile"><a href="UTest_modele.c.gcov.html">UTest_modele.c</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=83 height=10 alt="83.2%"><img src="../snow.png" width=17 height=10 alt="83.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=92 height=10 alt="91.6%"><img src="../snow.png" width=8 height=10 alt="91.6%"></td></tr></table>
       </td>
-      <td class="coverPerMed">83.2&nbsp;%</td>
-      <td class="coverNumMed">357 / 429</td>
-      <td class="coverPerMed">82.1&nbsp;%</td>
-      <td class="coverNumMed">32 / 39</td>
+      <td class="coverPerHi">91.6&nbsp;%</td>
+      <td class="coverNumHi">414 / 452</td>
+      <td class="coverPerHi">95.1&nbsp;%</td>
+      <td class="coverNumHi">39 / 41</td>
     </tr>
   </table>
   </center>
